[fix]: overflow scroll should only be on x-axis for mod-card-name

--- a/src/renderer/components/mod-card/ModCard.css
+++ b/src/renderer/components/mod-card/ModCard.css
@@ -27,7 +27,7 @@
 	max-width: 70%;
 	min-width: 70%;
 
-	overflow: scroll;
+	overflow-x: scroll;
 }
 
 .delete-button:hover {
